syntax = "proto3";

package sati_module_user;

message PlaceholderRequest { }

service UserService {
    rpc LoginBySMSCode (LoginBySMSCodeRequest) returns (LoginResponse);
    rpc LoginByMobileAndPassword (LoginByMobileAndPasswordRequest) returns (LoginResponse);
    rpc GetLoginVerificationCode(GetVerificationRequest) returns (VerificationCodeResponse);
    rpc GetRegisterVerificationCode(GetVerificationRequest) returns (VerificationCodeResponse);
    rpc RegisterBySMSCode (RegisterBySMSCodeRequest) returns (UserResponse);
    rpc UpdateUserById (UpdateUserByIdRequest) returns (UserResponse);
    rpc GetUserById (GetUserByIdRequest) returns (UserResponse);
    rpc GetUserByMobile (GetUserByMobileRequest) returns (UserResponse);
    rpc GetUser(GetUserRequest) returns (ManyUserResponse);
    rpc ChangeBalance(ChangeBalanceRequest) returns (UserResponse);
}

message GetVerificationRequest {
    string mobile = 1;
}

message LoginBySMSCodeRequest {
    string mobile = 1;
    string verificationCode = 2;
}

message LoginByMobileAndPasswordRequest {
    string mobile = 1;
    string password = 2;
}

message LoginResponse {
    LoginResponseData data = 1;
    message LoginResponseData {
        TokenInfo tokenInfo = 1;
        User user = 2;
    }
    message TokenInfo {
        string accessToken = 1;
        int32 expiresIn = 2;
    }
}

message RegisterBySMSCodeRequest {
    RegisterUserInput registerUserInput = 1;
    string verificationCode = 2;
    message RegisterUserInput {
        string mobile = 1;
        string password = 2;
        string nickname = 3;
        string avatar = 4;
    }
}

message UpdateUserInput {
    string nickname = 1;
    string password = 2;
    string avatar = 3;
    string status = 4;
}

message UpdateUserByIdRequest {
    string id = 1;
    string nickname = 2;
    string password = 3;
    string avatar = 4;
    string status = 5;
}

message ChangeBalanceRequest {
    string id = 1;
    int32 changeValue = 2;
    string type = 3;
    string extraInfo = 4;
}

message GetUserByIdRequest {
    string id = 1;
}

message GetUserByMobileRequest {
    string mobile = 1;
}

message UserResponse {
    User data = 1;
}

message ManyUserResponse {
    repeated User data = 1;
}

message VerificationCodeResponse {
    string data = 1;
}

message GetUserRequest {
    int32 first = 1;
    string after = 2;
}

message User {
    string id = 1;
    string username = 2;
    string nickname = 3;
    string mobile = 4;
    string avatar = 5;
    int32 status = 6;
    int32 createTime = 7;
    int32 updateTime = 8;
    int32 balance = 9;
}
